# Sophikon

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  setup.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 03d68951bfd2_initial_schema.py  30d06003cc31_add_organization_tables.py  4b9d33f7724a_add_unique_partial_index_task_order.py  b6f3a6c8b4aa_add_email_verification_table.py  seed_default_roles.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  rate_limit.py  security.py
backend/app/models/: __init__.py  activity_log.py  ai_conversation.py  ai_message.py  ai_usage.py  assignment.py  assignment_baseline.py  attachment.py  calendar.py  calendar_exception.py  comment.py  dependency.py  email_verification.py  enums.py  notification.py  organization.py  organization_member.py  password_reset.py  project.py  project_invitation.py  project_member.py  refresh_token.py  resource.py  resource_availability.py  resource_rate.py  role.py  task.py  task_baseline.py  time_entry.py  user.py
backend/app/schema/: assignment.py  auth.py  common.py  dependency.py  organization.py  organization_member.py  project.py  resource.py  task.py
backend/app/service/: assignment_service.py  auth_service.py  dependency_service.py  email_service.py  organization_member_service.py  organization_service.py  (+3 more)
backend/tests/: conftest.py  test_db_connection.py  test_health.py
(+192 files in other folders)
