[project]
name = "sophikon-backend"
version = "0.1.0"
description = "Sophikon V1.0 - AI-powered project management backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core Framework
    "fastapi>=0.128.2",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.0", # For Alembic migrations
    "alembic>=1.18.3",
    # Authentication
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.22",
    # Redis
    "redis>=7.1.0",
    # Background Tasks
    "celery>=5.6.2",
    # Email
    "fastapi-mail>=1.6.1",
    # File Handling
    "pillow>=12.1.0",
    # Utilities
    "uuid-utils>=0.14.0",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.1",  # For testing
    "faker>=33.3.0",  # Test data generation
]



